--- a/wordcount/templates/about.html
+++ b/wordcount/templates/about.html
@@ -1,6 +1,18 @@
-<h1>ABOUT</h1>
+<head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js" integrity="sha384-7aThvCh9TypR7fIc2HV4O/nFMVCBwyIUKL8XCtKE+8xgCgl/PQGuFsvShjr74PBp" crossorigin="anonymous"></script>
+</head>
+    <body>
+        
+<div class="container">
+    <br><br>
+    <h1>ABOUT</h1>
 
-<p> 안녕하세요, 그냥 워드카운트 만들어 봤어 반가워. </p>
+    <p> 안녕하세요, 그냥 워드카운트 만들어 봤어 반가워. </p>
 
 
-<a href="{%url 'home'%}">HOME 으로 돌아가기 </a>
+    <a href="{%url 'home'%}">HOME 으로 돌아가기 </a>
+</div>    
+</body>
