--- a/wordcount/templates/result.html
+++ b/wordcount/templates/result.html
@@ -1,14 +1,24 @@
-<h1> 당신이 입력한 텍스트는 {{total}} 로 구성되어 있습니다. </h1>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js" integrity="sha384-7aThvCh9TypR7fIc2HV4O/nFMVCBwyIUKL8XCtKE+8xgCgl/PQGuFsvShjr74PBp" crossorigin="anonymous"></script>
+</head>
+<body>
+<div class="container">
+    <br><br>
+    <h1> 당신이 입력한 텍스트는 {{total}} 로 구성되어 있습니다. </h1>
 
+    <button type="submit" class="btn btn-light"> <a href="{% url 'home' %}"> 다시하기 </a></button>
+    <br>
+    <h2> 입력한 텍스트 : </h2>
+    {{full}}
 
-<a href="{% url 'home' %}"> 다시하기 </a>
-<br>
-<h2> 입력한 텍스트 : </h2>
-{{full}}
+    <h2> 단어 카운트 : </h2>
 
-<h2> 단어 카운트 : </h2>
-
-{% for word, number in num_c %}
-    {{word}} : {{number}} 개
-<br>
-{%endfor%}
+    {% for word, number in num_c %}
+        {{word}} : {{number}} 개
+    <br>
+    {%endfor%}
+</div>
+</body>
